Edited text description

--- a/demo/appointment_noshow_tutorial.ipynb
+++ b/demo/appointment_noshow_tutorial.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "## Load Kaggle Dataset \n",
     "\n",
-    "Using cardea's `load_data_entityset`, we can now either load local files that are in [FHIR](hl7.org/fhir) format. In order to try out cardea, we want to load kaggle's open dataset instead. Cardea automatically loads the Kaggle dataset into its memory when no folder path is given."
+    "Using cardea's `load_data_entityset`, we can now either load local files that are in [FHIR](https://hl7.org/fhir) format. In order to try out cardea, we want to load kaggle's open dataset instead. Cardea automatically loads the Kaggle dataset into its memory when no folder path is given."
    ]
   },
   {
@@ -244,13 +244,13 @@
     "pipeline = [['sklearn.ensemble.RandomForestClassifier'], \n",
     "            ['sklearn.neighbors.KNeighborsClassifier']]\n",
     "```\n",
-    "Here we execute two different models, the first one being Random Forest and the second is Logistic Regression.\n",
+    "Here we execute two different models, the first one being Random Forest and the second is K-Nearest Neighbor (KNN).\n",
     "In addition, you can use the pipeline to create your own encoding and modeling pipeline where the data crosses several algorithms to create the prediction model. Such as:\n",
     "```\n",
-    "pipeline = [['sklearn.ensemble.RandomForestClassifier', 'sklearn.naive_bayes.MultinomialNB'], \n",
+    "pipeline = [['sklearn.preprocessing.StandardScaler', 'sklearn.ensemble.RandomForestClassifier'], \n",
     "            ['sklearn.neighbors.KNeighborsClassifier']]\n",
     "```\n",
-    "Here there are two different models, the first one composes of two (Random Forest and Multinomial Naive Bayes) and the second is Logistic Regression.\n",
+    "Here there are two different models, the first one composes of two primitives (Preprocessing through normalization then applying Random Forest) and the second is basic KNN.\n",
     "More on machine learning algorithms and MLPrimitives can be found here: https://HDI-Project.github.io/MLPrimitives"
    ]
   },
