Partially update to cardea 0.1.2

--- a/notebooks/appointment_noshow_tutorial.ipynb
+++ b/notebooks/appointment_noshow_tutorial.ipynb
@@ -112,18 +112,17 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 2983k  100 2983k    0     0  4618k      0 --:--:-- --:--:-- --:--:-- 4611k\n",
+      "100 2988k  100 2988k    0     0  3015k      0 --:--:-- --:--:-- --:--:-- 3012k\n",
       "Archive:  kaggle.zip\n",
-      "   creating: kaggle/\n",
-      "  inflating: kaggle/Patient.csv      \n",
-      "  inflating: kaggle/Coding.csv       \n",
-      "  inflating: kaggle/Appointment_Participant.csv  \n",
-      "  inflating: kaggle/Address.csv      \n",
-      "  inflating: kaggle/CodeableConcept.csv  \n",
-      "  inflating: kaggle/Reference.csv    \n",
-      "  inflating: kaggle/Observation.csv  \n",
-      "  inflating: kaggle/Identifier.csv   \n",
-      "  inflating: kaggle/Appointment.csv  \n"
+      "  inflating: Patient.csv             \n",
+      "  inflating: Coding.csv              \n",
+      "  inflating: Appointment_Participant.csv  \n",
+      "  inflating: Address.csv             \n",
+      " extracting: CodeableConcept.csv     \n",
+      "  inflating: Reference.csv           \n",
+      "  inflating: Observation.csv         \n",
+      "  inflating: Identifier.csv          \n",
+      "  inflating: Appointment.csv         \n"
      ]
     }
    ],
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -147,31 +146,31 @@
       "text/plain": [
        "Entityset: fhir\n",
        "  Entities:\n",
-       "    Patient [Rows: 6100, Columns: 4]\n",
        "    Coding [Rows: 3, Columns: 2]\n",
-       "    Appointment_Participant [Rows: 6100, Columns: 2]\n",
-       "    Address [Rows: 81, Columns: 2]\n",
-       "    CodeableConcept [Rows: 4, Columns: 2]\n",
        "    Reference [Rows: 6100, Columns: 1]\n",
+       "    CodeableConcept [Rows: 4, Columns: 2]\n",
+       "    Appointment [Rows: 110527, Columns: 5]\n",
+       "    Appointment_Participant [Rows: 6100, Columns: 2]\n",
+       "    Patient [Rows: 6100, Columns: 4]\n",
+       "    Address [Rows: 81, Columns: 2]\n",
        "    Observation [Rows: 110527, Columns: 3]\n",
        "    Identifier [Rows: 227151, Columns: 1]\n",
-       "    Appointment [Rows: 110527, Columns: 5]\n",
        "  Relationships:\n",
-       "    Patient.address -> Address.object_id\n",
-       "    Appointment_Participant.actor -> Reference.identifier\n",
        "    CodeableConcept.coding -> Coding.object_id\n",
+       "    Appointment.participant -> Appointment_Participant.object_id\n",
+       "    Appointment_Participant.actor -> Reference.identifier\n",
+       "    Patient.address -> Address.object_id\n",
        "    Observation.code -> CodeableConcept.object_id\n",
-       "    Observation.subject -> Reference.identifier\n",
-       "    Appointment.participant -> Appointment_Participant.object_id"
+       "    Observation.subject -> Reference.identifier"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cd.load_data_entityset(folder_path='kaggle')\n",
+    "cd.load_entityset(data='kaggle')\n",
     "\n",
     "# to view the loaded entityset\n",
     "cd.es"
@@ -183,7 +182,7 @@
     "id": "i90DCR_CWDpR"
    },
    "source": [
-    "The first section (entities) represents the resources that were loaded into the framework. In other words, it describes the dataframes available presented with the number of rows and columns. The second section describes the relationship between the resources. For example, the Patient resource has an address variable that is connected to the __Address__ resource."
+    "The first section (entities) represents the resources that were loaded into the framework. In other words, it describes the dataframes available presented with the number of rows and columns. The second section describes the relationship between the entities. For example, the Patient resource has an address variable that is connected to the __Address__ datatype."
    ]
   },
   {
@@ -212,7 +211,7 @@
       "text/plain": [
        "{'DiagnosisPrediction',\n",
        " 'LengthOfStay',\n",
-       " 'MissedAppointmentProblemDefinition',\n",
+       " 'MissedAppointment',\n",
        " 'MortalityPrediction',\n",
        " 'ProlongedLengthOfStay',\n",
        " 'Readmission'}"
@@ -326,8 +325,7 @@
    ],
    "source": [
     "# select problem\n",
-    "label_times = cd.select_problem('MissedAppointmentProblemDefinition')\n",
-    "label_times.head(5)"
+    "label_times = cd.select_problem('MissedAppointment')"
    ]
   },
   {
@@ -797,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
